--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -12,7 +12,7 @@
                         <div class="col m4 s12">
                             <div class="card-title red-text text-lighten-1"><h4>{{player.firstname}} {{player.name}}</h4></div>
                             <avatar person="player" width="'200px'"></avatar>
-                            <div class="blue-grey-text text-darken-2"><h3>{{player.status.squadnumber}}</h3></div>
+                            <div class="blue-grey-text text-darken-2"><h3># {{player.status.squadnumber}}</h3></div>
                         </div>
                         <div class="col m1 hide-on-small-only">&nbsp;</div>
                         <div class="col m3 s12">
