--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -26,7 +26,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#/private/updateEffective" class="red-text text-lighten-1 center tooltipped" 
+                    <a href="#/private/updateEffective/{{currentEffective._id}}" class="red-text text-lighten-1 center tooltipped" 
                         data-position="right" data-delay="20" data-tooltip="{{'mainEffective.buttons.updateEffective' | translate }}">
                             <i class="material-icons center">mode_edit</i>
                     </a>
@@ -61,7 +61,7 @@
             </a>
         </div>
         <div class="col s1 right-align">
-            <a href="#/private/updateEffective" class="red-text text-lighten-1 center tooltipped" 
+            <a href="#/private/updateEffective/{{currentEffective._id}}" class="red-text text-lighten-1 center tooltipped" 
                 data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.updateEffective' | translate }}">
                     <i class="material-icons small">mode_edit</i>
             </a>
