--- a/src/app/modules/sandbox/effective/updateEffective.html
+++ b/src/app/modules/sandbox/effective/updateEffective.html
@@ -11,7 +11,7 @@
     
     <div class="row">
         <div class="col s6">
-            <tags-input ng-model="members" display-property="name" placeholder="Add a player" 
+            <tags-input ng-model="members" display-property="{{name}}" key-property="_id" placeholder="Add a player" 
                 replace-spaces-with-dashes="false" template="ngTagsInput/tag-template">
                 <auto-complete source="loadPerson($query)" min-length="0" load-on-focus="true" load-on-empty="true"
                     max-results-to-show="32" template="ngTagsInput/autocomplete-template"></auto-complete
