--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -149,7 +149,7 @@
         </div>
 
         <div class="modal-footer">
-            <button type="submit" class="waves-effect waves-red btn teal" translate="commons.buttons.validate"/>
+            <button type="submit" class="waves-effect waves-red btn green darken-1" translate="commons.buttons.validate"/>
             <a href="#/" class="modal-action modal-close waves-effect waves-red btn red">{{'commons.buttons.cancel' |
                 translate}}</a>
         </div>
