--- a/src/app/modules/sandbox/effective/updateEffective.html
+++ b/src/app/modules/sandbox/effective/updateEffective.html
@@ -10,17 +10,42 @@
     </div>
     
     <div class="row">
-        <div class="col s6">
-            <tags-input ng-model="members" display-property="{{name}}" key-property="_id" placeholder="Add a player" 
-                replace-spaces-with-dashes="false" template="ngTagsInput/tag-template">
-                <auto-complete source="loadPerson($query)" min-length="0" load-on-focus="true" load-on-empty="true"
-                    max-results-to-show="32" template="ngTagsInput/autocomplete-template"></auto-complete
-            </tags-input>
-        </div>
-    
-        <div class="col s6">
-            <p>Model: {{members}}</p>
-        </div>
+        <form novalidate name="effectiveCaracterSection">
+            
+            <div class="row">
+                <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                <div class="input-field col m6 s12">
+                    <label class="active" >{{'effectiveLabels.effectiveCategoryAge' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                    <select class="browser-default" ng-model="effective.categoryAge.code" required id="effectiveCategoryAge"
+                            ng-options="p.code as p.label for p in listCategory">
+                    </select>
+                </div>
+                <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+            </div>
+            
+            <div class="row">
+                <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                <div class="col s6">
+                    <tags-input ng-model="members" display-property="name" key-property="_id" placeholder="{{'effectiveLabels.effectivePlaceHolderMembers' | translate }}" 
+                        replace-spaces-with-dashes="false" template="ngTagsInput/tag-template">
+                        <auto-complete source="loadPerson($query)" min-length="0" load-on-focus="true" load-on-empty="true"
+                            max-results-to-show="32" template="ngTagsInput/autocomplete-template"></auto-complete
+                    </tags-input>
+                </div>
+                <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+            </div>
+            
+            <!-- actions buttons -->
+            <div class="row">&nbsp;</div>
+            <div class="row">
+                <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                <div class="col m6 s12 center-align">
+                    <a href="#/private/effective" class="btn red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
+                    <a href="" ng-click="writeEffective()" class="btn green darken-1 white-text">{{'commons.buttons.validate' | translate }}</a>&nbsp;
+                </div>
+                <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+            </div>
+        </form>
     </div>
     
     
@@ -39,12 +64,12 @@
     <script type="text/ng-template" id="ngTagsInput/autocomplete-template">
       <div class="autocomplete-template">
         <div class="left-panel">
-          <simple-avatar person="player" width="'50px'" link=""></simple-avatar>
+          <i class="material-icons">perm_identity</i>
         </div>
         <div class="right-panel">
           <span ng-bind-html="$highlight($getDisplayText())"></span>
-          <span>({{data.name}})</span>
-          <span>{{data.firstname}}</span>
+          <span>{{data.name}} {{data.firstname}}</span>
+          <span>{{data.positionType}}</span>
         </div>
       </div>
     </script>
