--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -11,7 +11,7 @@
             </div>
             <div ng-show="addPlayerTitle">
                 <h5 class="header light-green-text text-lighten-1">
-                    <i class="material-icons btn-floating white-text red lighten-1 center">mode_edit</i> {{'addPlayer.title' | translate }}</h5>
+                    <i class="material-icons btn-floating white-text red lighten-1 center">person_add</i> {{'addPlayer.title' | translate }}</h5>
             </div>
         </div>
     </div>
