--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -11,7 +11,7 @@
             </a>
         </div>
         <div class="col s8">
-            <div><h5 class="header light-green-text text-lighten-1">{{'mainEffective.title' | translate }} {{currentCategory.label}} </h5></div>
+            <div><h5 class="header light-green-text text-lighten-1">{{'mainEffective.title' | translate }} : {{currentEffective.label}} - {{currentCategory.label}} </h5></div>
         </div>
         
         <div class="col s2">
@@ -51,7 +51,7 @@
             </a>
         </div>
         <div class="col s8">
-            <div><h5 class="header light-green-text text-lighten-1">{{'mainEffective.title' | translate }} {{currentCategory.label}} </h5></div>
+            <div><h5 class="header light-green-text text-lighten-1">{{'mainEffective.title' | translate }} : {{currentEffective.label}} - {{currentCategory.label}} </h5></div>
         </div>
         
         <div class="col s1 right-align">    
