--- a/src/app/modules/sandbox/effective/writeEffective.html
+++ b/src/app/modules/sandbox/effective/writeEffective.html
@@ -7,11 +7,11 @@
     <div class="row">
         <div class="col s12">
             <div ng-hide="addEffectiveTitle">
-                <h5 class="header light-green-text text-lighten-1">
+                <h5 class="header blue-grey-text text-darken-2 left">
                     <i class="material-icons btn-floating white-text red lighten-1 center">mode_edit</i> {{'updateEffective.title' | translate }}</h5>
             </div>
             <div ng-show="addEffectiveTitle">
-                <h5 class="header light-green-text text-lighten-1">
+                <h5 class="header blue-grey-text text-darken-2 left">
                     <i class="material-icons btn-floating white-text red lighten-1 center">person_add</i> {{'addEffective.title' | translate }}</h5>
             </div>
         </div>
@@ -21,102 +21,84 @@
         <form novalidate name="effectiveCaracterSection">
             
             <div class="row">
-                <div class="input-field col m2 s6 right-align">
+                <!-- input field -->
+                <div class="input-field col m2 s6">
                     <label for="effectiveLabel">{{'effectiveLabels.effectiveLabel' | translate }} <span class="red-text text-lighten-1">*</span></label>
                 </div>
-                <div class="input-field col m3 s6">
+                <div class="input-field col m4 s6">
                   <input ng-model="effective.label" id="effectiveLabel" type="text" class="validate left-align" required>
                 </div>
-                <div class="col m1 hide-on-med-and-down">&nbsp;</div>
-                
-                <div class="input-field col m2 s6 right-align">
+
+                <div class="input-field col m2 s6">
                     <label for="effectiveCategoryAge">{{'effectiveLabels.effectiveCategoryAge' | translate }} <span class="red-text text-lighten-1">*</span></label>
                 </div>
-                <div class="input-field col m3 s6 left-align">
+                <div class="input-field col m4 s6">
                     <select class="browser-default" ng-model="effective.categoryAge.code" required id="effectiveCategoryAge"
                             ng-options="p.code as p.label for p in listCategory">
                     </select>
                 </div>
-                <div class="col m1 hide-on-med-and-down">&nbsp;</div>
             </div>
             
-            
-            <div class="row">
-                <div class="col m2 hide-on-med-and-down">&nbsp;</div>
-                <div class="col m8 s12">
-                    <isteven-multi-select    
-                        input-model="persons"    
-                        output-model="members"
-                        button-label="N/A"
-                        item-label="name firstname positionType"
-                        tick-property="ticked"
-                        group-property="msGroup">
-                    </isteven-multi-select>
-                </div>
-                <div class="col m2 hide-on-med-and-down">&nbsp;</div>
-            </div>
-            
-                    
             <div class="row">
                 <div class="col m6 s12">
-                    <ul id="task-card" class="collection with-header">
-                      <li class="collection-header blue-grey darken-2 white-text">
-                          <h5 class="task-card-title">{{'effectiveLabels.effectiveMembers' | translate }}</h5>
-                      </li>
-                      <li class="collection-item dismissable" style="touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-                          <input type="checkbox" id="task1">
-                          <label for="task1" style="text-decoration: none;">Create Mobile App UI. <a href="#" class="secondary-content"><span class="ultra-small">Today</span></a>
-                          </label>
-                          <span class="task-cat teal">Mobile App</span>
-                      </li>
-                      <li class="collection-item dismissable" style="touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-                          <input type="checkbox" id="task2">
-                          <label for="task2" style="text-decoration: none;">Check the new API standerds. <a href="#" class="secondary-content"><span class="ultra-small">Monday</span></a>
-                          </label>
-                          <span class="task-cat purple">Web API</span>
-                      </li>
-                      <li class="collection-item dismissable" style="touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-                          <input type="checkbox" id="task3" checked="checked">
-                          <label for="task3" style="text-decoration: line-through;">Check the new Mockup of ABC. <a href="#" class="secondary-content"><span class="ultra-small">Wednesday</span></a>
-                          </label>
-                          <span class="task-cat pink">Mockup</span>
-                      </li>
-                      <li class="collection-item dismissable" style="touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-                          <input type="checkbox" id="task4" checked="checked" disabled="disabled">
-                          <label for="task4" style="text-decoration: line-through;">I did it !</label>
-                          <span class="task-cat cyan">Mobile App</span>
-                      </li>
-                    </ul>
+                    <div class="col s12">    
+                        <!-- List coachs -->
+                        <div class="white-text blue-grey darken-2">
+                            <h5>
+                                <i class="material-icons btn-floating white blue-grey-text text-darken-2 center">group</i> {{'effectiveLabels.effectiveCoachs' | translate }} 
+                            </h5>
+                        </div>
+                    </div>
+                    <div class="col s12">
+                        <div class="input-field">
+                            <label for="query">Filter</label>
+                            <input type="text" id="query2" ng-model="query2" class="validate form-control">
+                        </div>
+                    </div>
                 </div>
                 <div class="col m6 s12">
-                    <ul id="task-card" class="collection with-header">
-                      <li class="collection-header blue-grey darken-2 white-text">
-                          <h5 class="task-card-title">{{'effectiveLabels.effectiveTeams' | translate }}</h5>
-                      </li>
-                      <li class="collection-item dismissable" style="touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-                          <input type="checkbox" id="task1">
-                          <label for="task1" style="text-decoration: none;">Create Mobile App UI. <a href="#" class="secondary-content"><span class="ultra-small">Today</span></a>
-                          </label>
-                          <span class="task-cat teal">Mobile App</span>
-                      </li>
-                      <li class="collection-item dismissable" style="touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-                          <input type="checkbox" id="task2">
-                          <label for="task2" style="text-decoration: none;">Check the new API standerds. <a href="#" class="secondary-content"><span class="ultra-small">Monday</span></a>
-                          </label>
-                          <span class="task-cat purple">Web API</span>
-                      </li>
-                      <li class="collection-item dismissable" style="touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-                          <input type="checkbox" id="task3" checked="checked">
-                          <label for="task3" style="text-decoration: line-through;">Check the new Mockup of ABC. <a href="#" class="secondary-content"><span class="ultra-small">Wednesday</span></a>
-                          </label>
-                          <span class="task-cat pink">Mockup</span>
-                      </li>
-                      <li class="collection-item dismissable" style="touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-                          <input type="checkbox" id="task4" checked="checked" disabled="disabled">
-                          <label for="task4" style="text-decoration: line-through;">I did it !</label>
-                          <span class="task-cat cyan">Mobile App</span>
-                      </li>
-                    </ul>
+                    <!-- List players -->
+                    <div class="col s12">
+                        <div class="white-text blue-grey darken-2">
+                            <h5>
+                                <i class="material-icons btn-floating white blue-grey-text text-darken-2 center">group</i> {{'effectiveLabels.effectiveMembers' | translate }} 
+                                <span class="right small">{{selectedPlayers.length}} {{'effectiveLabels.effectiveNbPlayers' | translate }}</span>
+                            </h5>
+                        </div>
+                    </div>
+                    <div class="col s12">
+                        <div class="input-field">
+                            <label for="query">Filter</label>
+                            <input type="text" id="query" ng-model="query" class="validate form-control">
+                        </div>
+                    </div>
+                    <div class="col s12">
+                        <table class="hoverable bordered">
+                            <thead>
+                                <tr class>
+                                    <th></th>
+                                    <th class="white blue-grey-text text-darken-2">{{'effectiveLabels.effectiveTabPlayerColPlayer' | translate }}</th>
+                                    <th class="white blue-grey-text text-darken-2">{{'effectiveLabels.effectiveTabPlayerColPosition' | translate }}</th>
+                                </tr>
+                            </thead>
+                            <body>
+                                <tr ng-repeat="player in persons | filter:query"
+                                    selection-model
+                                    selection-model-type="checkbox"
+                                    selection-model-mode="multiple-additive"
+                                    selection-model-selected-attribute="checked"
+                                    selection-model-selected-items="selectedPlayers"
+                                    selection-model-on-change="changed(player)">
+                                    <td><simple-avatar person="player" width="'40px'" link="('#/private/viewPlayer/' + player._id)"></simple-avatar></td>
+                                    <td>                                    
+                                        <input type="checkbox" id="{{$index + 1}}"/> 
+                                        <label for="{{$index + 1}}">{{player.name}} {{player.firstname}}</label>
+                                    </td>
+                                    <td>{{player.positionType}}</td>
+                                </tr>
+                            </body>
+                        </table>
+                    </div>
                 </div>
             </div>
             
@@ -133,32 +115,5 @@
         </form>
     </div>
     
-    
-    
-    <!-- TEMPLATE FOR TAGS-INPUTS -->
-    <script type="text/ng-template" id="ngTagsInput/tag-template">
-      <div class="tag-template">
-        <simple-avatar person="player" width="'25px'" link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
-                &nbsp;
-                <small>{{data.name}}</small>
-                <a ng-click="$removeTag()" href=""><i class="material-icons circle red ligthen-1 white-text">clear</i></a>
-            
-      </div>
-    </script>
-    
-    <script type="text/ng-template" id="ngTagsInput/autocomplete-template">
-      <div class="autocomplete-template">
-        <div class="left-panel">
-          <i class="material-icons">perm_identity</i>
-        </div>
-        <div class="right-panel">
-          <span ng-bind-html="$highlight($getDisplayText())"></span>
-          <span>{{data.name}} {{data.firstname}}</span>
-          <span>{{data.positionType}}</span>
-        </div>
-      </div>
-    </script>
-
-   
 <!-- body end-->
 </div>
